--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10822,6 +10822,10 @@ footer {
     width: 20vw;
     box-shadow: 20px -20px 15px #888888;
 }
+.img2 {
+    position: relative;
+    top: -12vw;
+}
 .tree{
     
 }
