九日最終コミットだお

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10829,6 +10829,10 @@ footer {
 .tree{
     
 }
+.how{
+    margin-top: 17vw;
+    margin-bottom: 6vw;
+}
 .main-img {
     width: 40vw;
     height: 23vw;
